<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">Weather Detail</string>
    <string name="title_activity_detail_activity">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_title">Location</string>
    <string name="pref_location_default_value" translatable="false">London</string>
    <string name="pref_unit_key">unit</string>
    <string name="pref_unit_title">Unit</string>
    <string name="pref_unit_default_value">metric</string>
    <string name="pref_unit_value_imperial">imperial</string>
    <string name="pref_icon_pack_key">iconPack</string>
    <string name="pref_icon_pack_title">Icon Pack</string>
    <string name="pref_icon_pack_default_value">regular</string>
    <string name="action_map">Map</string>
    <string name="share_item_title">Share</string>
    <string name="content_provider">Weather Content Provider</string>
    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>


    <!-- Strings for formatting weather-related data -->
    <!-- Temperature format [CHAR LIMIT=5] -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph"><xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh"><xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure"><xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity"><xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.android.sunshine.app</string>
    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>

    <string name="pref_location_status_key">location_stat</string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>
    <string name="pref_notification_summary_off">Notification is off</string>
    <string name="pref_notification_summary_on">Notification is on</string>
    <string name="pref_notification_key">notification</string>
    <string name="pref_notification_title">Notification</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <string name="pref_notification_summary">Notification Summary</string>

    <!-- Strings related to error handling -->
    <string name="empty_forecast_message">No weather information is currently available</string>
    <string name="empty_forecast_no_network_message">No weather information available. The network is not available to fetch the weather data.</string>
    <string name="empty_forecast_list_server_down">No weather information available. The server is not returning data.</string>
    <string name="empty_forecast_list_server_error">No weather information available. The server is not returning valid data. Please check for an updated version of Sunshine.</string>
    <string name="empty_forecast_list_invalid_location">No weather information available. The location in settings is not recognized by the weather server.</string>

    <!-- Strings used when displaying the state of the Location in settings -->
    <string name="pref_location_error_description">Invalid Location (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_location_unknown_description">Validating Location... (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>

    <!-- A11y -->
    <string name="a11y_forecast">Forecast: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_forecast_icon">Forecast icon: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_high_temp">High: <xliff:g id="high">%1$s</xliff:g></string>
    <string name="a11y_low_temp">Low: <xliff:g id="low">%1$s</xliff:g></string>


    <string name="edittext_hint">Enter location for weather forecast</string>

    <!-- Format for retrieving art from an external source [CHAR LIMIT=NONE] -->
    <!-- Value in SharedPreferences for Deb art pack option [CHAR LIMIT=NONE] -->
    <string name="format_art_url" translatable="false">https://rawgit.com/pdroid84/SyncAdapterExample/master/app/src/main/res/drawable-xxhdpi/art_%s.png</string>
    <!-- Value in SharedPreferences for cute dogs art pack  option [CHAR LIMIT=NONE] -->
    <string name="format_art_url_pack_cute_dogs" translatable="false">https://rawgit.com/pdroid84/WeatherIconPacks/master/Colored/art_%s.png</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>

    <!-- For Shared Element Transitions -->
    <string name="detail_icon_transition_name" translatable="false">TN_DetailIcon</string>

    <!-- Content description for the get current location button in the location preference -->
    <string name="pref_current_location_desc">Use my location</string>

    <!-- Key name for storing location latlong in SharedPreferences -->
    <string name="pref_location_latitude" translatable="false">loc-latitude</string>
    <string name="pref_location_longitude" translatable="false">loc-longitude</string>

    <!-- For Google Places API Attributions -->
    <string name="attribution_text">Powered by Google</string>

    <!-- Strings related to Widgets -->
    <string name="title_widget_today">Sunshine Today</string>
    <string name="title_widget_detail">Sunshine Detail</string>
    <string name="widget_list_empty_view_text">No weather data available for display</string>

    <!-- Key name for art pack unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_art_pack_key" translatable="false">art_pack</string>

    <!-- Value in SharedPreferences for Sunshine art pack option [CHAR LIMIT=NONE] -->
    <string name="pref_art_pack_sunshine" translatable="false">https://rawgit.com/pdroid84/SyncAdapterExample/master/app/src/main/res/drawable-xxhdpi/art_%s.png</string>

</resources>
